# GUI-Design

2D partical simulation/: CMakeLists.txt  NOTES.txt  README.md
2D partical simulation/particle/: App.cpp  App.hpp  CMakeLists.txt  CanvasGL.cpp  CanvasGL.hpp  ControlPanel.cpp  ControlPanel.hpp  MainWindow.cpp  MainWindow.hpp  Simulation.cpp  Simulation.hpp  Vector2d.hpp
calculator/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
calculator/calc/: App.cpp  App.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
